--- a/index.html
+++ b/index.html
@@ -1,7 +1,122 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>My website on GitHub Pages. It works!</p>
+<html lang="en">
+
+<head>
+<title>Timofii Nasedkin my applications</title>
+<META NAME="Description" content="" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Cache-Control" content="no-cache">
+
+
+
+
+<style type="text/css" >
+
+html{
+
+width:100%;
+height:100%;
+font-family:  cursive;
+padding: 0px;
+margin: 0px; 
+
+
+}
+
+body{
+-webkit-touch-callout: none; /* iOS Safari */
+-webkit-user-select: none; /* Safari */
+ -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+        user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+
+width:100%;
+height:auto;
+min-height:100vh;
+font-weight:bold;
+padding: 0px;
+margin: 0px;
+-moz-user-select: none;
+-khtml-user-select: none;
+background: linear-gradient( #1db6f6 , #98E0FE   ) fixed;
+border: 0px  #000 solid;
+}
+
+
+#foto_autor{
+width:100%;
+height:auto;
+display: flex; justify-content: center; align-items: center;
+padding: 5px;
+border: 0px;
+}
+
+#foto_min{
+border: 0px;
+border-radius: 50%;
+}
+
+#desc{
+font-family:  cursive;
+font-size: 16px;
+width:80%;
+height:auto;
+border: 0px;
+display:block;
+padding: 5px;
+}
+
+
+#my_applications{
+width:100%;
+height:auto;
+padding: 5px;
+border: 0px;
+text-align:center;
+}
+
+.ic_app{
+width:200px;
+height:200px;
+border-radius: 10%;
+border: 1px  #000 solid;
+display:block;
+}
+
+.ic_app{
+width:200px;
+height:200px;
+border-radius: 10%;
+border: 1px  #000 solid;
+display:inline-block;
+margin: 5px;
+overflow:hidden;
+}
+</style>
+</head>
+<body >
+
+<div id='foto_autor'>
+
+<img id='foto_min' src='img_applications/foto_autor.png' width='300' height='326'  ></img>
+
+</div>
+<center><div id='desc'>
+
+Hey. My name is Timofii Nasedkin. In my free time I do programming and create online applications. I hope my online applications will be useful to you. My X - <a target='_blank' href='https://twitter.com/TimofejN40669' >@TimofejN40669</a>
+
+
+</div></center>
+
+<div id='my_applications'>
+
+<a class='link_app' href='https://timofei-nasedkin.github.io/GameHuntFeedFrog3/index.html' target='_blank'  ><img class='ic_app'  src='img_applications/ic_Hunt_Feed_the_frog_3.png'   ></img></a>
+
+<a class='link_app' href='https://radialjigsawpuzzlegame.blogspot.com' target='_blank' ><img class='ic_app' src='img_applications/ic_Radial_puzzle.png'   ></img></a>
+
+</div>
+
 </body>
 </html>
